Resolvendo vulnerabilidades, reorganizando pacotes
